--- a/Figaro/Figaro/Figaro.csproj
+++ b/Figaro/Figaro/Figaro.csproj
@@ -42,9 +42,9 @@
     <Compile Include="RestClient\TaskModel.cs" />
     <Compile Include="Services\PlatosServices.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
-    <EmbeddedResource Include="Views\MainPage.xaml.cs">
+    <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
-    </EmbeddedResource>
+    </Compile>
     <Compile Include="Models\Plato.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\NuevoPlato.xaml.cs">
