Añadido TipoCocina API y MVC

--- a/WebServicesFigaro/WebServicesFigaro.csproj
+++ b/WebServicesFigaro/WebServicesFigaro.csproj
@@ -167,12 +167,21 @@
     <Compile Include="Controllers\PlatoMvcController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PlatoController.cs" />
+    <Compile Include="Controllers\TipoCocinaController.cs" />
+    <Compile Include="Controllers\TipoCocinaMvcController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608220827247_TipoCocina.cs" />
+    <Compile Include="Migrations\201608220827247_TipoCocina.Designer.cs">
+      <DependentUpon>201608220827247_TipoCocina.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Plato.cs" />
     <Compile Include="Models\PlatoContext.cs" />
+    <Compile Include="Models\TipoCocina.cs" />
+    <Compile Include="Models\TipoCocinaContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -230,8 +239,17 @@
     <Content Include="Views\PlatoMvc\Details.cshtml" />
     <Content Include="Views\PlatoMvc\Edit.cshtml" />
     <Content Include="Views\PlatoMvc\Index.cshtml" />
+    <Content Include="Views\TipoCocinaMvc\Create.cshtml" />
+    <Content Include="Views\TipoCocinaMvc\Delete.cshtml" />
+    <Content Include="Views\TipoCocinaMvc\Details.cshtml" />
+    <Content Include="Views\TipoCocinaMvc\Edit.cshtml" />
+    <Content Include="Views\TipoCocinaMvc\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201608220827247_TipoCocina.resx">
+      <DependentUpon>201608220827247_TipoCocina.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
