--- a/WebServicesFigaro/WebServicesFigaro.csproj
+++ b/WebServicesFigaro/WebServicesFigaro.csproj
@@ -174,21 +174,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201608231211137_InitialMigration.cs" />
-    <Compile Include="Migrations\201608231211137_InitialMigration.Designer.cs">
-      <DependentUpon>201608231211137_InitialMigration.cs</DependentUpon>
+    <Compile Include="Migrations\201608260705375_Inicial.cs" />
+    <Compile Include="Migrations\201608260705375_Inicial.Designer.cs">
+      <DependentUpon>201608260705375_Inicial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201608231215009_AddImagen.cs" />
-    <Compile Include="Migrations\201608231215009_AddImagen.Designer.cs">
-      <DependentUpon>201608231215009_AddImagen.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\ConfigurationPlato.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Plato.cs" />
-    <Compile Include="Models\PlatoContext.cs" />
+    <Compile Include="Models\DBContext.cs" />
     <Compile Include="Models\TipoCocina.cs" />
-    <Compile Include="Models\TipoCocinaContext.cs" />
     <Compile Include="Models\Zona.cs" />
-    <Compile Include="Models\ZonaContext.cs" />
     <Compile Include="Models\ZonaController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -279,11 +273,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201608231211137_InitialMigration.resx">
-      <DependentUpon>201608231211137_InitialMigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201608231215009_AddImagen.resx">
-      <DependentUpon>201608231215009_AddImagen.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201608260705375_Inicial.resx">
+      <DependentUpon>201608260705375_Inicial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
