--- a/Figaro/Figaro/Figaro.csproj
+++ b/Figaro/Figaro/Figaro.csproj
@@ -55,6 +55,9 @@
     </Compile>
     <Compile Include="Models\Plato.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\VerPlato.xaml.cs">
+      <DependentUpon>VerPlato.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\NuevoPlato.xaml.cs">
       <DependentUpon>NuevoPlato.xaml</DependentUpon>
     </Compile>
@@ -134,6 +137,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Other\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\VerPlato.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
