--- a/Figaro/Figaro/packages.config
+++ b/Figaro/Figaro/packages.config
@@ -6,5 +6,6 @@
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Plugin.RestClient" version="1.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Xamarin.Forms" version="2.0.0.6482" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.6.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Forms" version="2.3.0.107" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
