--- a/WebServicesFigaro/WebServicesFigaro.csproj
+++ b/WebServicesFigaro/WebServicesFigaro.csproj
@@ -165,6 +165,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ChefController.cs" />
+    <Compile Include="Controllers\ChefMvcController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\MenuMvcController.cs" />
     <Compile Include="Controllers\PlatoMvcController.cs" />
@@ -225,7 +227,16 @@
     <Compile Include="Migrations\201609051104585_AnadidoEstaOculto.Designer.cs">
       <DependentUpon>201609051104585_AnadidoEstaOculto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609051536456_AnadidoChef.cs" />
+    <Compile Include="Migrations\201609051536456_AnadidoChef.Designer.cs">
+      <DependentUpon>201609051536456_AnadidoChef.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609070811061_ImagenFondoZona.cs" />
+    <Compile Include="Migrations\201609070811061_ImagenFondoZona.Designer.cs">
+      <DependentUpon>201609070811061_ImagenFondoZona.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Chef.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\Plato.cs" />
     <Compile Include="Models\DBContext.cs" />
@@ -316,6 +327,11 @@
     <Content Include="Views\MenuMvc\Details.cshtml" />
     <Content Include="Views\MenuMvc\Edit.cshtml" />
     <Content Include="Views\MenuMvc\Index.cshtml" />
+    <Content Include="Views\ChefMvc\Create.cshtml" />
+    <Content Include="Views\ChefMvc\Delete.cshtml" />
+    <Content Include="Views\ChefMvc\Details.cshtml" />
+    <Content Include="Views\ChefMvc\Edit.cshtml" />
+    <Content Include="Views\ChefMvc\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -361,6 +377,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609051104585_AnadidoEstaOculto.resx">
       <DependentUpon>201609051104585_AnadidoEstaOculto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609051536456_AnadidoChef.resx">
+      <DependentUpon>201609051536456_AnadidoChef.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609070811061_ImagenFondoZona.resx">
+      <DependentUpon>201609070811061_ImagenFondoZona.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
