--- a/Figaro/Figaro/Figaro.csproj
+++ b/Figaro/Figaro/Figaro.csproj
@@ -39,7 +39,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Configuration\ViewModelLocator.cs" />
-    <Compile Include="Models\Carrito.cs" />
+    <Compile Include="Other\Carrito.cs" />
     <Compile Include="Models\Chef.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\TipoCocina.cs" />
