--- a/Figaro/Figaro/Figaro.csproj
+++ b/Figaro/Figaro/Figaro.csproj
@@ -40,6 +40,7 @@
     </Compile>
     <Compile Include="Configuration\ViewModelLocator.cs" />
     <Compile Include="Models\ComentarioChef.cs" />
+    <Compile Include="Models\Pedido.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Other\Carrito.cs" />
     <Compile Include="Models\Chef.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Services\ChefServices.cs" />
     <Compile Include="Services\ComentarioChefServices.cs" />
     <Compile Include="Services\MenusServices.cs" />
+    <Compile Include="Services\PedidoServices.cs" />
     <Compile Include="Services\PlatosServices.cs" />
     <Compile Include="Services\TipoCocinaServices.cs" />
     <Compile Include="Services\UsuarioServices.cs" />
@@ -64,6 +66,12 @@
     </Compile>
     <Compile Include="Views\ChefsPage.xaml.cs">
       <DependentUpon>ChefsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ModoPago.xaml.cs">
+      <DependentUpon>ModoPago.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PedirDatos.xaml.cs">
+      <DependentUpon>PedirDatos.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PlatosPage.xaml.cs">
       <DependentUpon>PlatosPage.xaml</DependentUpon>
@@ -232,6 +240,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\VerCarrito.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\PedirDatos.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ModoPago.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
